# sendspin-armv6

./: CMakeLists.txt  README.md
.github/workflows/: build-debug.yml  build-release.yml  build.yml  release.yml
cmake/: toolchain-armv6.cmake
config/: sendspin-armv6.conf  sendspin-armv6.service
scripts/: install.sh  uninstall.sh  upgrade.sh
src/: alsa_pipe_sink.cpp  alsa_pipe_sink.h  config.cpp  config.h  main.cpp
